# torchlite

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  release.yml
docs/: conf.py
examples/: gan.py  mnist_cnn.py  transformer.py
tests/: test_autograd.py  test_nn.py  test_tensor.py
tests/benchmarks/: benchmark_ops.py
torchlite/: __init__.py  tensor.py
torchlite/autograd/: __init__.py  function.py  gradients.py  variable.py
torchlite/cuda/: __init__.py  kernels.py
torchlite/data/: __init__.py  dataloader.py  dataset.py  transforms.py
torchlite/distributed/: parallel.py
torchlite/jit/: trace.py
torchlite/nn/: __init__.py  activations.py  attention.py  container.py  embedding.py  layers.py  loss.py  module.py  pooling.py  rnn.py
torchlite/optim/: __init__.py  adagrad.py  adam.py  lr_scheduler.py  optimizer.py  rmsprop.py  sgd.py
torchlite/utils/: ___init__.py  data.py  model_summary.py  visualization.py
