[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "torchlite"
dynamic = ["version"]
description = "A lightweight, educational deep learning framework"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    {name = "Ryan Tobin", email="ryantobin119@gmail.com"},
]
keywords = ["deep learning", "neural networks", "machine learning", "AI"]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy", "pre-commit"]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser"]

[tool.setuptools_scm]
write_to = "torchlite/_version.py"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line-length = 100 

[tool.mypy]
python_version = "3.8"
warn_return_any = true 
warn_unused_configs = true 
disallow_untyped_defs = true 